# RAG-pipeline

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  contribution.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  pr-title-check.yml
data/: papers.json
frontend/: app.py
ragpipeline/: __init__.py  api.py  config.py  dataset.py  features.py  generation.py  ingestion.py  plots.py  retrieval.py
ragpipeline/modeling/: predict.py  train.py
tests/: conftest.py  test_generation.py  test_ingestion.py  test_retriever.py
